@@ -75,7 +75,7 @@ public class Controller_Room {
             if (contractResult.isEmpty()) {
                 rooms[i][1] = "Unknown";
             } else {
-                PersonModel personResult = PersonDAO.getInstance().selectById(contractResult.get(0).getIdentifier());
+                PersonModel personResult = PersonDAO.getInstance().selectById(contractResult.getFirst().getIdentifier());
                 rooms[i][1] = personResult.getLastName() + " " + personResult.getFirstName();
             }
             rooms[i][2] = Integer.toString(result.get(i).getQuantity());
@@ -91,7 +91,7 @@ public class Controller_Room {
             return null;
         } else {
             ArrayList<RoomModel> roomList = RoomDAO.getInstance().selectByCondition("ORDER BY roomId ASC");
-            StringBuilder lastRoomId = new StringBuilder(roomList.get(roomList.size() - 1).getRoomId());
+            StringBuilder lastRoomId = new StringBuilder(roomList.getLast().getRoomId());
             lastRoomId.replace(0, 1, "0");
             StringBuilder idTail = new StringBuilder(Integer.toString(Integer.parseInt(lastRoomId.toString()) + 1));
             while (idTail.length() != 3)
@@ -113,7 +113,7 @@ public class Controller_Room {
         if (roomList.isEmpty()) {
             return "P001";
         } else {
-            StringBuilder lastRoomId = new StringBuilder(roomList.get(roomList.size() - 1).getRoomId());
+            StringBuilder lastRoomId = new StringBuilder(roomList.getLast().getRoomId());
             lastRoomId.replace(0, 1, "0");
             StringBuilder idTail = new StringBuilder(Integer.toString(Integer.parseInt(lastRoomId.toString()) + 1));
             while (idTail.length() != 3)
@@ -164,19 +164,15 @@ public class Controller_Room {
                                             Frame_MainApplication mainFrameApp, JDialog dialog) {
         ContractModel contractId = getContractByRoomId(roomId);
         try {
-            if (checkOutDate.getDate().before(contractId.getStartingDate()) ||
-                    checkOutDate.getDate().equals(contractId.getStartingDate())) {
-                return false;
-            } else {
-                return true;
-            }
-        } catch (NullPointerException e) {
+            return !checkOutDate.getDate().before(contractId.getStartingDate()) &&
+                    !checkOutDate.getDate().equals(contractId.getStartingDate());
+        } catch (NullPointerException ignored) {
             return false;
         }
     }
     public static ContractModel getContractByRoomId(String roomId){
         ArrayList<ContractModel> contractId = ContractDAO.getInstance().selectByCondition("WHERE roomId = \"" +
                 roomId + "\" AND checkedOut = 0");
-        return contractId.get(0);
+        return contractId.getFirst();
     }
 }
